Nuevo: acerca de nosotros

--- a/clases HTML/bienvenido.html
+++ b/clases HTML/bienvenido.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="header">
-            <a href="" class="acerca">Acerca de nosotros</a>
+            <a href="acerca_de_nosotros.html" class="acerca">Acerca de nosotros</a>
             <a href="" class="ayuda">Ayuda</a>
             <a href="" class="politicas">Politícas de privacidad</a>
             <a href="" class="contactanos">Contáctanos</a>
