--- a/clases HTML/inicioSesion.html
+++ b/clases HTML/inicioSesion.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="../clases CSS/stylesInicioSesion.css">
-    <img src="../imagenes/logoCC.jpeg" alt="logo de empresa" class="logo">
+    <img src="../imagenes/logoSinFondoCC.jpeg" alt="logo de empresa" class="logo">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="login-container">
