--- a/clases HTML/acerca_de_nosotros.html
+++ b/clases HTML/acerca_de_nosotros.html
@@ -3,9 +3,32 @@
     <head>
         <title>Acerca de nosotros</title>
         <link rel="stylesheet" href="../clases CSS/styleAcercaNosotros.css">
+        <a class="migas" href="bienvenido.html" >Inicio</a>
+        <img src="../imagenes/logoSinFondoCC.jpeg" alt="Logo de la empresa" class="logo">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+        
     </head>
 
     <body>
+        <h1 class="titulo">Acerca de nosotros</h1>
         
+        <div class="card">
+            <p>
+                Cuenta Clara es un sistema desarrollado por estudiantes de la Universidad Tecnológica de Tlaxcala (UTT) con el objetivo de modernizar y optimizar el proceso de cobro y control en el comedor universitario. 
+            </p>
+            <p>
+                Nuestro propósito es brindar una herramienta confiable, sencilla y eficiente que permita al personal del comedor llevar un control detallado de sus operaciones diarias, reducir errores manuales y mejorar la experiencia tanto para los empleados como para los usuarios del servicio.
+            </p>
+            <h2>Nuesta Misión</h2>
+            <p>
+                Facilitar la administración de los recursos del comedor mediante una plataforma digital adaptada a sus  necesidades reales.
+            </p>
+            <h2>¿Quiénes somos?</h2>
+            <p>
+                Un equipo de desarrollo comprometido con la mejora tecnológica de nuestra institución, aplicando nuestros conocimientos en programación, diseño de bases de datos y experiencia de usuario para resolver problemas concretos en nuestro entorno.
+            </p>
+        </div>
     </body>
 </html>
