--- a/clases HTML/bienvenido.html
+++ b/clases HTML/bienvenido.html
@@ -11,9 +11,9 @@
     <body>
         <div class="header">
             <a href="acerca_de_nosotros.html" class="acerca">Acerca de nosotros</a>
-            <a href="" class="ayuda">Ayuda</a>
-            <a href="" class="politicas">Politícas de privacidad</a>
-            <a href="" class="contactanos">Contáctanos</a>
+            <a href="ayuda.html" class="ayuda">Ayuda</a>
+            <a href="politicas_de_privacidad.html" class="politicas">Politícas de privacidad</a>
+            <a href="contactanos.html" class="contactanos">Contáctanos</a>
         </div>
         <div class="contenedorImagen"><img src="../imagenes/logoSinFondoCC.jpeg" alt="Logo de la empresa" class="logo"></div>
         <div class="footer">
