--- a/clases HTML/bienvenido.html
+++ b/clases HTML/bienvenido.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
         <title>Bienvenido</title>
         <link rel="stylesheet" href="../clases CSS/styleBienvenido.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +20,7 @@
         <div class="contenedorImagen"><img src="../imagenes/logoSinFondoCC.jpeg" alt="Logo de la empresa" class="logo"></div>
         <div class="footer">
             <a href="inicioSesion.html" class="iniciar_sesion">Iniciar sesión</a>
-            <a href="" class="nuevo_usuario">Nuevo usuario</a>
+            <a href="nuevo_usuario.html" class="nuevo_usuario">Nuevo usuario</a>
         </div>
         
     </body>
