Agrega interfaz de configuracion y menu hamburguesa

--- a/clases HTML/corte.html
+++ b/clases HTML/corte.html
@@ -57,7 +57,7 @@
             </li>
             
             <li class="menu-item">
-                <a href="..\../clases HTML/Ajustes/ajustes.html" class="menu-link">
+                <a href="..\../clases HTML/ajustes.html" class="menu-link">
                     <i class="fas fa-cog fallback-icon"></i>
                     <span class="menu-label">Ajustes</span>
                 </a>
