panel derecho en sec. Corte

--- a/clases HTML/corte.html
+++ b/clases HTML/corte.html
@@ -67,8 +67,26 @@
 
     <!-- Contenido principal -->
     <main class="content">
-        <h1>Sistema de Restaurante</h1>
-        <p>Menú lateral contraíble con iconos personalizados.</p>
+        <div class="title-card">
+            <h1>Corte de caja</h1>
+        </div>
     </main>
+
+<!------------------------------------------------------------------------------------------------------>
+    <!-- Panel derecho -->
+    <div class="right-panel">
+        <div class="right-panel-content">
+            <div class="title-card">
+                <h2>Información</h2>
+            </div>
+            <p>En ajustes puedes modificar tres cosas clave:</p>
+            <p>1. El menú (qué platillos aparecen),</p>
+            <p>2. Las mesas (cómo están organizadas),</p>
+            <p>3. El manejo de perfiles (crear o eliminar perfiles).</p>
+
+        </div>
+    </div>
+
+
 </body>
 </html>
